--- a/presentation/src/main/res/layout/fragment_patients.xml
+++ b/presentation/src/main/res/layout/fragment_patients.xml
@@ -49,9 +49,9 @@
         android:id="@+id/fab_add_patient"
         android:layout_width="wrap_content"
         app:tint="@color/white"
+        android:background="@color/teal_700"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:visibility="gone"
         android:layout_marginEnd="20dp"
         android:src="@drawable/ic_add"
         app:layout_constraintBottom_toBottomOf="parent"
