add delete feature to presentation layer: -modify the  patient adapter -add delete flow to the patientViewModel class -add delete method in the PatientFragment -add delete icon in drawable and row patient layout -modify data layer names and delete response model data class.

--- a/presentation/src/main/res/layout/fragment_patients.xml
+++ b/presentation/src/main/res/layout/fragment_patients.xml
@@ -35,7 +35,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:spanCount="2"
-            tools:listitem="@layout/item_patient" />
+            tools:listitem="@layout/row_patient" />
 
         <TextView
             android:id="@+id/tv_error"
