create details fragment -details fragment created and added to the navigation component. -on click event added to the patient adapter and patient fragment.

--- a/presentation/src/main/res/navigation/navigation_app.xml
+++ b/presentation/src/main/res/navigation/navigation_app.xml
@@ -12,9 +12,17 @@
         <action
             android:id="@+id/action_patientsFragment_to_addFragment"
             app:destination="@id/addFragment" />
+        <action
+            android:id="@+id/action_patientsFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment"/>
     </fragment>
     <fragment
         android:id="@+id/addFragment"
         android:name="com.example.patientproject.presentation.features.add.AddFragment"
         android:label="AddFragment" />
+    <fragment
+        android:id="@+id/detailsFragment"
+        android:name="com.example.patientproject.presentation.features.details.DetailsFragment"
+        android:label="DetailsFragment"
+       />
 </navigation>
